// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": Object {
    "data": Array [
      21,
      214,
      156,
      169,
      236,
      162,
      144,
      178,
      198,
      175,
      241,
      192,
      75,
      3,
      253,
      148,
      150,
      74,
      63,
      45,
      108,
      129,
      205,
      147,
      7,
      34,
      212,
      32,
      19,
      213,
      245,
      176,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Object {
  "data": Array [
    35,
    240,
    124,
    190,
    82,
    211,
    13,
    72,
    41,
    160,
    218,
    178,
    79,
    153,
    114,
    255,
    168,
    188,
    152,
    128,
    117,
    140,
    74,
    196,
    165,
    78,
    184,
    223,
    87,
    189,
    28,
    252,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
Object {
  "data": Array [
    169,
    5,
    156,
    187,
    42,
    176,
    158,
    178,
    25,
    88,
    63,
    74,
    89,
    165,
    208,
    98,
    58,
    222,
    52,
    109,
    150,
    43,
    205,
    78,
    70,
    177,
    29,
    160,
    71,
    201,
    4,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 13761632275218847273520262751574664149269181891159611676226614084913136324343n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Object {
  "data": Array [
    0,
    32,
    75,
    45,
    86,
    220,
    44,
    202,
    122,
    163,
    215,
    123,
    83,
    121,
    26,
    194,
    99,
    141,
    0,
    103,
    126,
    236,
    147,
    241,
    131,
    252,
    87,
    140,
    173,
    250,
    199,
    73,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hash constructor info 1`] = `
Object {
  "data": Array [
    6,
    8,
    191,
    65,
    136,
    96,
    198,
    140,
    203,
    137,
    102,
    172,
    105,
    89,
    77,
    15,
    15,
    196,
    42,
    213,
    11,
    179,
    9,
    133,
    16,
    68,
    18,
    76,
    208,
    143,
    149,
    123,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
Object {
  "data": Array [
    13,
    190,
    226,
    203,
    10,
    204,
    39,
    84,
    100,
    192,
    162,
    67,
    136,
    181,
    14,
    129,
    247,
    2,
    200,
    119,
    238,
    121,
    125,
    98,
    82,
    60,
    23,
    238,
    206,
    4,
    213,
    200,
  ],
  "type": "Buffer",
}
`;
